Add first part of 2nd Project

--- a/references.bib
+++ b/references.bib
@@ -17,3 +17,8 @@
 }
 
 
+@online{p2_experimento,
+  title = {Measuring Your Threshold of Hearing for Sounds of Different Pitches},
+  date = {2020},
+  author = {Science Buddies Staff}
+}
