--- a/Projeto1/projeto1.qmd
+++ b/Projeto1/projeto1.qmd
@@ -12,7 +12,7 @@ Se você já sabe Julia, ou consegue resolver os exercícios sem dificuldades, s
 ## Vetores e Matrizes
 É muito difícil você fazer Física sem usar vetores ou matrizes, por isso você precisa dominar operações básicas de Algebra Linear.
 
-1. Dados 3 vetores  $\vec{a} = (1,-1,1)$,  $\vec{b} = (-3,1,5)$ e $\vec{c} = (4,-7,3)$ \footnote{Valores copiados de \cite{p1_ex2}} :
+(@) Dados 3 vetores  $\vec{a} = (1,-1,1)$,  $\vec{b} = (-3,1,5)$ e $\vec{c} = (4,-7,3)$ \footnote{Valores copiados de \cite{p1_ex2}} :
 
     a. Calcule a norma (valor absoluto Euclidiano) de cada vetor.
 
@@ -29,7 +29,7 @@ Se você já sabe Julia, ou consegue resolver os exercícios sem dificuldades, s
 
 Outra tarefa recorrente em programação é leitura de dados em arquivo para posterior análise.
 
-2. Voltaremos aos tempos de ensino médio, e vamos calcular tempo de queda livre $t_q = \sqrt{2h/g}$, porém não apenas na Terra.
+(@) Voltaremos aos tempos de ensino médio, e vamos calcular tempo de queda livre $t_q = \sqrt{2h/g}$, porém não apenas na Terra.
 
     a. Pesquise o valor da aceleração da gravidade, $g$, em diferentes planetas do sistema solar. Salve seus resultados em um arquivo `.txt`, cuja primeira coluna é o nome do planeta, e na segunda o valor de $g$. Separe os dados com uma vírgula.
 
@@ -45,7 +45,7 @@ Outra tarefa recorrente em programação é leitura de dados em arquivo para pos
 
 ## Estrutura de Repetição
 
-3. Ignorando um gama gigantesca de fatores, vamos assumir, o cenário irrealístico, de que a temperatura anual de uma cidade na região Sudeste do Brasil é descrito por uma função cosseno, cuja miníma anual é 5°, e máxima anual é 35°, acontecendo no primeiro dia do Verão, dia 21 de dezembro (que corresponde ao 355° dia do ano).
+(@) Ignorando um gama gigantesca de fatores, vamos assumir, o cenário irrealístico, de que a temperatura anual de uma cidade na região Sudeste do Brasil é descrito por uma função cosseno, cuja miníma anual é 5°, e máxima anual é 35°, acontecendo no primeiro dia do Verão, dia 21 de dezembro (que corresponde ao 355° dia do ano).
 
     a. Crie uma função que simule o comportamento de temperatura anual.
 
@@ -66,13 +66,13 @@ Procure por **Trig word problem: modeling annual temperature** na Internet.
 
 Computadores são máquinas incríveis para fazer contas, mas ainda sim possuem limites. Vamos testar um deles com o cálculo da função seno.
 
-4. Crie um programa para estimar o valor  de *sen(x)* através de sua expansão de Taylor truncada em $N$ elementos:
+(@) Crie um programa para estimar o valor  de *sen(x)* através de sua expansão de Taylor truncada em $N$ elementos:
     $$
        sin(x) = \sum_{n=0}^{N} (-1)^n \frac{x^{2n+1}}{(2n+1)!}
     $$
-  a. Escolha um valor de $x$ e calcule a série para $N$ diferentes. Quanto maior $N$, melhor será seus resultado, e nós desejamos verificar isso exibindo os erro absoluto  em um plot de escala logarítmica. Use a biblioteca `Plots.jl` para isso.
+    a. Escolha um valor de $x$ e calcule a série para $N$ diferentes. Quanto maior $N$, melhor será seus resultado, e nós desejamos verificar isso exibindo os erro absoluto  em um plot de escala logarítmica. Use a biblioteca `Plots.jl` para isso.
 
-  a. Para quais valores de $N$ você não consegue mais realizar a somatória ? Por quê?
+    a. Para quais valores de $N$ você não consegue mais realizar a somatória ? Por quê?
 
 
 ::: {.callout-note collapse="true"}
@@ -86,7 +86,7 @@ Use a função `sin(x)` que já vem por padrão em Julia para obter o valor exat
 
 Será inevitável que você fará uso de pacotes prontos. E é comum em Julia a criação de novos tipos de dados - `tipos` no sentido `Int` ou `Float`. Esse recurso permite que você desenvolva códigos mais inteligível e tudo começa com `struct`. Nesse exercício criaremos um tipo de dado para ajudar a calcular resistências em série de circuitos elétricos.
 
-5. Defina um `struct`^[É esperado que você busque na internet por exemplos mínimos de como trabalhar com `struct`.] chamado `resistor` com 2 campos do tipo `Number`: Resistência, $R$ e Corrente, $i$.
-  a. Instancie 2 resistores em série, com $i = 4A$, e $R_1 = 5\Omega$ e $R_2 = 20\Omega$.
-  a. Crie uma função que receba o tipo de entrada `resistor` e retorne a tensão $U = R\cdot i$.
-  a. Crie um novo *método* que some 2 resistências em série e retorne um novo objeto do tipo `resistor`.
+(@) Defina um `struct`^[É esperado que você busque na internet por exemplos mínimos de como trabalhar com `struct`.] chamado `resistor` com 2 campos do tipo `Number`: Resistência, $R$ e Corrente, $i$.
+    a. Instancie 2 resistores em série, com $i = 4A$, e $R_1 = 5\Omega$ e $R_2 = 20\Omega$.
+    a. Crie uma função que receba o tipo de entrada `resistor` e retorne a tensão $U = R\cdot i$.
+    a. Crie um novo *método* que some 2 resistências em série e retorne um novo objeto do tipo `resistor`.
