--- a/projetos.qmd
+++ b/projetos.qmd
@@ -1,3 +1,11 @@
 # Projetos
 
-Projetos serão alterados baseados no feedback dos leitores.
+Cada projeto será focado em um conceito principal, listado no **Objetivo Geral** de cada capítulo. Sempre que possível, você não precisará descobrir um *truque mágico* na internet para resolver os exercícios.
+
+Todos os projetos são:
+
+- pensados para alunos que já cursaram Cálculo 1, Algebra Linear, Física 1, e Introdução a Programação;
+
+- realizados com linguagem Julia, pois ela possui alta performance, similar ao C e Fortran, além de recursos modernos que facilitarão sua vida de programador;
+
+- alterados baseados no feedback dos leitores. Por favor, indique todas as questões que as instruções não estão claras, ou simplismente se o projeto ficou complicado de mais. Sua opinião honesta faz a diferença.
