--- a/references.bib
+++ b/references.bib
@@ -22,3 +22,53 @@
   date = {2020},
   author = {Science Buddies Staff}
 }
+
+@article{p3_capivaras,
+      author   = {Lucas Gomes da Silva et al},
+      title    = {Termografia de capivaras (Hydrochoerus hydrochaeris) do perímetro urbano de Campo Grande-MS},
+      journal  = {PUBVET},
+      year     = {2019},
+      volume   = {13},
+      number   = {3},
+      pages    = {1-9},
+      note = {\url{https://www.pubvet.com.br/uploads/3b8f3f56935dfa61654fdd7f9852415e.pdf}}
+}
+
+@misc{p3_irradiancia_treta,
+  title = {convert units for spectral irradiance},
+  author = {KatyB},
+  year = {2014},
+  note  =  {\url{https://physics.stackexchange.com/questions/116596/convert-units-for-spectral-irradiance}},
+  note = {Acessado em: 06-20-2021},
+}
+@misc{p3_irradiancia_detalhe,
+  title = {Understanding Radiance (Brightness), Irradiance and Radiant Flux},
+  author = {H. Zhu, P. Blackborow},
+  year = {2019},
+  note  =  {\url{https://www.energetiq.com/technote-understanding-radiance-brightness-irradiance-radiant-flux}},
+  note = {Acessado em: 06-20-2021},
+}
+
+@book{p3_book_radiation,
+  title = {Atmospheric Radiation: A Primer with Illustrative Solutions},
+  author = {James A. Coakley Jr, Ping Yang },
+  year = {2014},
+  pages = {256},
+  publisher = {Wiley-VCH}
+}
+
+@misc{p3_satelite,
+  title = {Solar Spectra},
+  author = {National Renewable Energy Laboratory},
+  year = {2021},
+  note  =  {\url{https://www.nrel.gov/grid/solar-resource/spectra.html}},
+  note = {Acessado em: 06-20-2021},
+}
+
+@misc{p3_Wien,
+  title = {Wien's displacement law},
+  author = {Wikipedia},
+  year = {2021},
+  note  =  {\url{https://en.wikipedia.org/wiki/Wien\%27s_displacement_law}},
+  note = {Acessado em: 06-20-2021},
+}
