--- a/index.qmd
+++ b/index.qmd
@@ -1,10 +1,14 @@
-# Olá {.unnumbered}
+# Física Computacional {.unnumbered}
 
-**Física Computacional**, ou **FisComp** para os íntimos, poderia ser uma disciplina muito interessante se o ênfoque fosse em física, e não em métodos numéricos sem contextualização. Esse texto é uma tentativa produzir uma literatura nova, e espero que seja fonte de inspiração para que as futuras gerações façam algo ainda melhor do que aqui apresentado.
+**Física Computacional**, ou **FisComp** para os íntimos, é uma disciplina comum em cursos universitários de Física. Isso se faz necessário, pois, de uma maneira ou outra, em pleno século 21 não é possível fazer física sem o auxlídio do computador, e essa disciplina visa ensinar conceito de Métodos Numéricos aplicados a física.
 
-O texto está desenvolvimento contínuo, favor reportar os erros.
+Contudo, do ponto de vista do autor desse livro, os demais livros textos são focados excessivamente em derivações dos métodos numéricos, e deixam a contextualização muito superficial no da física envolvida. Isso é frustrante, pois o leitor não é exposto a diferentes cenários, gerando a impressão que todos os algoritmos que aprendeu, *só servem para passar na prova*.
 
-*Agradecimentos eternos aos meus amigos que revisaram os projetos.*
+Como alternativa ao *status quo*, esse texto é criado do zero, com a finalidade de ensinar **Física Computacional com mais ênfase na Física**. Vários *Projetos Temáticos* discutirão, em muitos detalhes, como *obter* física utilizando diferentes técnicas computacionais.
+
+Se tudo der certo, espero que esse texto impacte **sua vida**, servindo como um exemplo, uma base, uma fonte de inspiração, para que *você* produzá conteúdos melhores do que aqui apresentados.
+
+*Desejo agradecer eternamente aos meus amigos pela paciência de revisar as primeiras versões desse projetos.*
 
 ---
 Essa página foi gerada com <https://quarto.org/docs/books>.
