--- a/references.bib
+++ b/references.bib
@@ -23,6 +23,18 @@
   author = {Science Buddies Staff}
 }
 
+@article{p2_despacito,
+      author   = {Adam Gray},
+      title    = {How Loud Would It Be If Every Alexa In The World Played “Despacito” At The Same Time?},
+      journal  = {Journal of Interdisciplinary Science Topics},
+      year     = {2019},
+      volume   = {8},
+      note = {\url{https://journals.le.ac.uk/ojs1/index.php/jist/article/view/3072}}
+    }
+
+
+
+
 @article{p3_capivaras,
       author   = {Lucas Gomes da Silva et al},
       title    = {Termografia de capivaras (Hydrochoerus hydrochaeris) do perímetro urbano de Campo Grande-MS},
