--- a/references.bib
+++ b/references.bib
@@ -84,3 +84,19 @@
   note  =  {\url{https://en.wikipedia.org/wiki/Wien\%27s_displacement_law}},
   note = {Acessado em: 06-20-2021},
 }
+
+@misc{p3_integracao,
+  title = {8.3 Black Body Radiation | Calculus-Integration},
+  author = {University of Washington Center for Quantitative Science, Updated by the TrEnCh Project},
+  year = {2020},
+  note  =  {\url{https://bookdown.org/huckley/Physical_Processes_In_Ecosystems/8-3-radiation-bbradiation.html}},
+  note = {Acessado em: 06-26-2021},
+}
+
+@misc{p3_integral_contorno,
+  title = {complex analysis - Contour integral for $x^3/(e^x-1)$? - Mathematics Stack Exchange},
+  author = {Simon S},
+  year = {2012},
+  note  =  {\url{https://math.stackexchange.com/questions/99843/contour-integral-for-x3-ex-1}},
+  note = {Acessado em: 06-27-2021},
+}
