Projeto 4 - primeiros textos

--- a/references.bib
+++ b/references.bib
@@ -100,3 +100,44 @@
   note  =  {\url{https://math.stackexchange.com/questions/99843/contour-integral-for-x3-ex-1}},
   note = {Acessado em: 06-27-2021},
 }
+
+
+% url={https://www.fiberoptics4sale.com/blogs/wave-optics/104730310-mueller-matrices-for-polarizing-elements},
+ @misc{p4_stokes,
+     title={Mueller matrices for polarizing elements},
+     author={Fosco Connect},
+     note = {Acessado em: 07-21-2022},
+ }
+
+% https://www.axometrics.com/articles/understanding-the-mueller-matrix
+ @misc{p4_mueller,
+     title={Understanding the Mueller Matrix},
+     author={Axometrics, Inc},
+     note = {Acessado em: 07-21-2022},
+ }
+
+@article{p4absorcaomueller,
+author = {R. M. A. Azzam},
+journal = {J. Opt. Soc. Am.},
+number = {12},
+pages = {1756--1767},
+publisher = {Optica Publishing Group},
+title = {Propagation of partially polarized light through anisotropic media with or without depolarization: A differential 4 {\texttimes} 4 matrix calculus},
+volume = {68},
+month = {Dec},
+year = {1978},
+doi = {10.1364/JOSA.68.001756}
+}
+
+@article{p4_oriol,
+  TITLE = {{Mueller matrix polarimetry of bianisotropic materials [Invited]}},
+  AUTHOR = {Arteaga, Oriol and Kahr, Bart},
+  URL = {https://hal-polytechnique.archives-ouvertes.fr/hal-02437038},
+  JOURNAL = {{Journal of the Optical Society of America B}},
+  PUBLISHER = {{Optical Society of America}},
+  YEAR = {2019},
+  DOI = {10.1364/JOSAB.36.000F72},
+  PDF = {https://hal-polytechnique.archives-ouvertes.fr/hal-02437038/file/361433.pdf},
+  HAL_ID = {hal-02437038},
+  HAL_VERSION = {v1},
+}
