--- a/Projeto2/_21_experimento.qmd
+++ b/Projeto2/_21_experimento.qmd
@@ -2,6 +2,8 @@
 
 Você pode aumentar ou diminuir a altura do som do seu celular com 2 botões. Contudo, seu ouvido não funciona da mesma maneira. Se você é exposto a sons de mesma intensidade, mas frequências diferentes, você terá a impressão que os sons estão em volumes diferentes. Essa sensibilidade diferente para cada frequência depende de pessoa para pessoa, e sua primeira atividade será descobrir os limites dos **seus** ouvidos.
 
+---
+
 Você irá realizar o experimento proposto em [@p2_experimento], para acessar os seus detalhes, clique [aqui](https://www.sciencebuddies.org/science-fair-projects/project-ideas/HumBio_p011/human-biology-health/measuring-hearing-threshold-different-pitches). A atividade consiste em escutar sons com frequências bem definidas, porém de intensidades diferentes ao longo do tempo. Ao contar a quantidade de tons, você conseguirá calcular os seus limites auditivos.
 
 ::: callout-caution
@@ -26,17 +28,27 @@ Uma maneira de contornar o cansaço físico é não realizar o experimento de fo
 :::
 
 
+Leia atentamente a descrição do [experimento](https://www.sciencebuddies.org/science-fair-projects/project-ideas/HumBio_p011/human-biology-health/measuring-hearing-threshold-different-pitches) e preencha uma tabela com a quantidade de batidas que você escutou em cada repetição.
 
+**a. Armazene os seus resultados em uma planilha\footnote{Tipo Microsoft Excel ou similar}.**
 
-(@) Leia atentamente a descrição do [experimento](https://www.sciencebuddies.org/science-fair-projects/project-ideas/HumBio_p011/human-biology-health/measuring-hearing-threshold-different-pitches) e preencha uma tabela com a quantidade de batidas que você escutou em cada repetição.
+**b. Salve os dados como um arquivo CSV.**
 
-    a. Armazene os seus resultados em uma planilha\footnote{Tipo Microsoft Excel ou similar}.
+**c. Leia os dados em Julia com o pacote `DelimitedFiles.jl`, e com o pacote de vizualização de sua escolha, faça um gráfico `semilogx` dos seus resultados.**
+```{julia}
+using DelimitedFiles
+data = readdlm("minha_audicao.csv", ','; skipstart=1);
 
-    a. Salve os dados como um arquivo CSV.
+using Plots
+xdata = data[:, 1]
+ydata = data[:, 8]
 
-    a. Leia os dados em Julia com o pacote `DelimitedFiles.jl`, e com o pacote de vizualização de sua escolha, faça um gráfico `semilogx` dos seus resultados.
+plot(xdata, ydata; label="", markershape=:o, xscale=:log10, xlims=(10, 25_000))
+plot!(; xticks=([10, 100, 1000, 10000], ["10", "100", "1000", "10000"]))
+plot!(; xlabel="Hertz", ylabel="dB", title="Threshold of Hering")
+```
 
-        O tamanho da fonte da figura deve ser comparável ao texto onde ele estará embutido.
+O tamanho da fonte da figura deve ser comparável ao texto onde ele estará embutido.
 
 
 
